--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style>
     body {
       color: #ffffff;
-      background-color: #007f3f;
+      background-color: #00FF00;
       font-family: Arial, sans-serif;
       font-size: 14px;
     }
